logs/Slang/generated/hdlconv/hdlconvertor_p185_2.sv.log
name: hdlconvertor_p185_2
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p185_2.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p185_2.sv:3:1: error: language feature not yet supported
class C;
^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p185_2.sv:6:1: error: language feature not yet supported
class D extends C;
^~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p185_2.sv:9:1: error: language feature not yet supported
class E #(type Y = logic) extends C;
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
